--- a/src/PortfolioContainer/Home/Navbar/Nav.css
+++ b/src/PortfolioContainer/Home/Navbar/Nav.css
@@ -1,9 +1,19 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .navbar {
-  width: 20%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 75px;
+
+  /* width: 20%;
   height: 50px;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 1; */
 }
 
 .container {
@@ -11,10 +21,9 @@
   margin: 0 auto;
 }
 
-.nav-container {
+.navbar-container {
   display: flex;
   height: 100px;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -23,4 +32,25 @@
 }
 
 .navbar-right {
+  color: rgb(241, 242, 243);
+  margin-left: 500px;
+  display: flex;
+  justify-content: flex-end;
 }
+
+.home a,
+.about a,
+.skills a,
+.resume a,
+.contact a {
+  text-decoration: none;
+  color: rgb(241, 243, 243);
+  font-size: 20px;
+  padding: 10px 20px;
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+/* .navbar-right li a {
+  display: flex;
+} */
