--- a/src/PortfolioContainer/AboutMe/About.css
+++ b/src/PortfolioContainer/AboutMe/About.css
@@ -6,17 +6,67 @@
 
 .a-left {
   flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .a-right {
   flex: 1;
 }
 
-/* .a-card {
-  height: 92%;
-  width: 92%;
-  background-image: url("../../../assets/Home/profile.jpg");
-  background-size: cover;
-  border-radius: 50%;
-  background-repeat: no-repeat;
+.a-card {
+  width: 60%;
+  height: 70vh;
+  border-radius: 30px;
+}
+
+.a-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.a-card img {
+  width: 400px;
+  margin-top: 200px;
+  margin-left: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.a-left {
+  padding-left: 60px;
+}
+
+.intro {
+  padding-left: 500px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  animation: text 3s 1;
+}
+
+/* .intro {
+  opacity: 1;
+  animation: ani2 0.75s ease-out 3s forwards;
+} */
+
+@keyframes text {
+  0% {
+    color: black;
+    margin-bottom: -40px;
+  }
+  30% {
+    letter-spacing: 25px;
+    margin-bottom: -40px;
+  }
+  85% {
+    letter-spacing: 8px;
+    margin-bottom: -40px;
+  }
+}
+
+/* @keyframes ani1 {
+  100% {
+    transform: scale(1.55);
+  }
 } */
